module(name = "otiv")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_rust", version = "0.49.3")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "toolchains_protoc", version = "0.3.1")
bazel_dep(name = "toolchains_llvm", version = "1.1.2")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
llvm.toolchain(name = "llvm_toolchain", llvm_versions = {"": "17.0.6"})
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.80.0", "nightly/2024-07-20"],
    sha256s = {
        "2024-07-20/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "97750490a01fa797d93eb2ea72c6b02492cc85671ba2ca1c3fa1d1a61968b587",
        "2024-07-20/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "8ebdd6a56559a11a4863ab23d9a0c8896a2f5759d40bd6869bad857f57b85e55",
        "2024-07-20/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "3a0ab34fe9a3985b75711fafa0e5e1215904be7e70ab3e432300f7d165e8bf18",
        "2024-07-20/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "b53be917d6e1f844d5c72b027751985c8c8116851cc980e92f407167aff0c9ad",
        "2024-07-20/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "16e059cd736127f1667c1f56de17fadb8a1d31cb4fab6ca64ac11ef4c2864bc2",
    },
)
use_repo(rust, "rust_toolchains")
register_toolchains("@llvm_toolchain//:all")
register_toolchains("@rules_rust//proto/protobuf:default-proto-toolchain")
register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.spec(package = "anyhow", version = "1.0.86")

CRATES_REPOSITORY_NAME = "crates"
crate.from_specs(name = CRATES_REPOSITORY_NAME)
use_repo(crate, CRATES_REPOSITORY_NAME)
